--- a/test-output/old/Default suite/reporter-output.html
+++ b/test-output/old/Default suite/reporter-output.html
@@ -1,43 +1,35 @@
-<h2>Reporter output</h2><table><tr><td>[[ChromeDriver: chrome on windows (669ffae7cc0ba6c38c0883c85f2ae018)] -> xpath: //span[text()='Home Loans']//parent::a[@id='navHomeLoans']]<---------> has been clicked<br></td></tr>
-<tr><td>[[ChromeDriver: chrome on windows (669ffae7cc0ba6c38c0883c85f2ae018)] -> xpath: //span[text()='Explore home loans']] ---> Actual text : Explore home loans. Expected text : Explore home loans<br></td></tr>
-<tr><td>[[ChromeDriver: chrome on windows (669ffae7cc0ba6c38c0883c85f2ae018)] -> link text: Mortgage]<---------> has been clicked<br></td></tr>
+<h2>Reporter output</h2><table><tr><td>[[ChromeDriver: chrome on windows (14275cfab185c474a68395566aa00bfc)] -> xpath: //span[text()='Home Loans']//parent::a[@id='navHomeLoans']]<---------> has been clicked<br></td></tr>
+<tr><td>[[ChromeDriver: chrome on windows (14275cfab185c474a68395566aa00bfc)] -> xpath: //span[text()='Explore home loans']] ---> Actual text : Explore home loans. Expected text : Explore home loans<br></td></tr>
+<tr><td>[[ChromeDriver: chrome on windows (14275cfab185c474a68395566aa00bfc)] -> link text: Mortgage]<---------> has been clicked<br></td></tr>
 <tr><td>Current URL is : https://www.bankofamerica.com/mortgage/home-mortgage/<br></td></tr>
-<tr><td>Sleeping ... zZz 3<br></td></tr>
-<tr><td>[[ChromeDriver: chrome on windows (669ffae7cc0ba6c38c0883c85f2ae018)] -> id: applyNow]<---------> is Displayed, true<br></td></tr>
+<tr><td>[[ChromeDriver: chrome on windows (14275cfab185c474a68395566aa00bfc)] -> id: applyNow]<---------> is Displayed, true<br></td></tr>
 <tr><td>Proxy element for: DefaultElementLocator 'By.id: applyNow'<---------> has been clicked<br></td></tr>
 <tr><td>Current URL is : https://secure.bankofamerica.com/digital-mortgage-application/landing/#landing<br></td></tr>
-<tr><td>Sleeping ... zZz 3<br></td></tr>
-<tr><td>[[ChromeDriver: chrome on windows (669ffae7cc0ba6c38c0883c85f2ae018)] -> id: dmaFlowButton]<---------> is Displayed, true<br></td></tr>
+<tr><td>[[ChromeDriver: chrome on windows (14275cfab185c474a68395566aa00bfc)] -> id: dmaFlowButton]<---------> is Displayed, true<br></td></tr>
 <tr><td>Proxy element for: DefaultElementLocator 'By.id: dmaFlowButton'<---------> has been clicked<br></td></tr>
-<tr><td>Sleeping ... zZz 3<br></td></tr>
 <tr><td>Current URL is : https://secure.bankofamerica.com/digital-mortgage-application/mortgage/#purchase-gating-question<br></td></tr>
-<tr><td>[[ChromeDriver: chrome on windows (669ffae7cc0ba6c38c0883c85f2ae018)] -> id: propertyContractYes]<---------> has been clicked<br></td></tr>
+<tr><td>[[ChromeDriver: chrome on windows (14275cfab185c474a68395566aa00bfc)] -> id: propertyContractYes]<---------> has been clicked<br></td></tr>
 <tr><td>Sleeping ... zZz 3<br></td></tr>
-<tr><td>[[ChromeDriver: chrome on windows (669ffae7cc0ba6c38c0883c85f2ae018)] -> id: isBofaCustomer-no]<---------> has been clicked<br></td></tr>
-<tr><td>Sleeping ... zZz 3<br></td></tr>
-<tr><td>[[ChromeDriver: chrome on windows (669ffae7cc0ba6c38c0883c85f2ae018)] -> id: signInContinueButton]<---------> has been clicked<br></td></tr>
+<tr><td>[[ChromeDriver: chrome on windows (14275cfab185c474a68395566aa00bfc)] -> id: isBofaCustomer-no]<---------> has been clicked<br></td></tr>
+<tr><td>[[ChromeDriver: chrome on windows (14275cfab185c474a68395566aa00bfc)] -> id: signInContinueButton]<---------> has been clicked<br></td></tr>
 <tr><td>Current URL is : https://secure.bankofamerica.com/digital-mortgage-application/mortgage/#bac-sign-in<br></td></tr>
-<tr><td>[[ChromeDriver: chrome on windows (669ffae7cc0ba6c38c0883c85f2ae018)] -> xpath: //span[text()='Your information']]<---------> is Displayed, false<br></td></tr>
+<tr><td>[[ChromeDriver: chrome on windows (14275cfab185c474a68395566aa00bfc)] -> xpath: //span[text()='Your information']]<---------> is Displayed, false<br></td></tr>
+<tr><td>[[ChromeDriver: chrome on windows (14275cfab185c474a68395566aa00bfc)] -> xpath: //input[@class='first-name-field spa-input-text']] ---> We can Enter : 32 Character in the field which was similar with the Expected as: 32<br></td></tr>
+<tr><td>The Text from the [[ChromeDriver: chrome on windows (14275cfab185c474a68395566aa00bfc)] -> xpath: //input[@class='first-name-field spa-input-text']] ---> is cleared<br></td></tr>
+<tr><td>Dilshad <-----> has been put into <-----> [[ChromeDriver: chrome on windows (14275cfab185c474a68395566aa00bfc)] -> xpath: //input[@class='first-name-field spa-input-text']] and then clicked by Tab Key<br></td></tr>
+<tr><td>DAZ <-----> has been put into <-----> [[ChromeDriver: chrome on windows (14275cfab185c474a68395566aa00bfc)] -> id: middleName] and then clicked by Tab Key<br></td></tr>
+<tr><td>Zannat <-----> has been put into <-----> [[ChromeDriver: chrome on windows (14275cfab185c474a68395566aa00bfc)] -> id: lastName] and then clicked by Tab Key<br></td></tr>
+<tr><td>[[ChromeDriver: chrome on windows (14275cfab185c474a68395566aa00bfc)] -> id: suffix]<---------> has been clicked<br></td></tr>
+<tr><td>[[ChromeDriver: chrome on windows (14275cfab185c474a68395566aa00bfc)] -> xpath: //option[text()='Sr']]<---------> has been clicked<br></td></tr>
+<tr><td>743090789 <-----> has been put into <-----> [[ChromeDriver: chrome on windows (14275cfab185c474a68395566aa00bfc)] -> id: phoneNumber]<br></td></tr>
+<tr><td>shshsh@gmail.com <-----> has been put into <-----> [[ChromeDriver: chrome on windows (14275cfab185c474a68395566aa00bfc)] -> id: email] and then clicked by Tab Key<br></td></tr>
+<tr><td>45 Southwest 9th Street <-----> has been put into <-----> [[ChromeDriver: chrome on windows (14275cfab185c474a68395566aa00bfc)] -> id: locationField]<br></td></tr>
 <tr><td>Sleeping ... zZz 3<br></td></tr>
-<tr><td>Sleeping ... zZz 2<br></td></tr>
-<tr><td>[[ChromeDriver: chrome on windows (669ffae7cc0ba6c38c0883c85f2ae018)] -> xpath: //input[@class='first-name-field spa-input-text']] ---> We can Enter : 32 Character in the field which was similar with the Expected as: 32<br></td></tr>
-<tr><td>The Text from the [[ChromeDriver: chrome on windows (669ffae7cc0ba6c38c0883c85f2ae018)] -> xpath: //input[@class='first-name-field spa-input-text']] ---> is cleared<br></td></tr>
-<tr><td>Sleeping ... zZz 2<br></td></tr>
-<tr><td>Dilshad <-----> has been put into <-----> [[ChromeDriver: chrome on windows (669ffae7cc0ba6c38c0883c85f2ae018)] -> xpath: //input[@class='first-name-field spa-input-text']] and then clicked by Tab Key<br></td></tr>
-<tr><td>Sleeping ... zZz 2<br></td></tr>
-<tr><td>DAZ <-----> has been put into <-----> [[ChromeDriver: chrome on windows (669ffae7cc0ba6c38c0883c85f2ae018)] -> id: middleName] and then clicked by Tab Key<br></td></tr>
+<tr><td>989121234 <-----> has been put into <-----> [[ChromeDriver: chrome on windows (14275cfab185c474a68395566aa00bfc)] -> id: ssn]<br></td></tr>
+<tr><td>09132000 <-----> has been put into <-----> [[ChromeDriver: chrome on windows (14275cfab185c474a68395566aa00bfc)] -> id: dob] and then clicked by Tab Key<br></td></tr>
+<tr><td>[[ChromeDriver: chrome on windows (14275cfab185c474a68395566aa00bfc)] -> id: haveDependentsNo]<---------> has been clicked<br></td></tr>
 <tr><td>Sleeping ... zZz 3<br></td></tr>
-<tr><td>Zannat <-----> has been put into <-----> [[ChromeDriver: chrome on windows (669ffae7cc0ba6c38c0883c85f2ae018)] -> id: lastName] and then clicked by Tab Key<br></td></tr>
-<tr><td>Sleeping ... zZz 3<br></td></tr>
-<tr><td>[[ChromeDriver: chrome on windows (669ffae7cc0ba6c38c0883c85f2ae018)] -> id: suffix]<---------> has been clicked<br></td></tr>
-<tr><td>[[ChromeDriver: chrome on windows (669ffae7cc0ba6c38c0883c85f2ae018)] -> xpath: //option[text()='Sr']]<---------> has been clicked<br></td></tr>
-<tr><td>Sleeping ... zZz 2<br></td></tr>
-<tr><td>[[ChromeDriver: chrome on windows (669ffae7cc0ba6c38c0883c85f2ae018)] -> id: phoneNumber]<---------> has been clicked<br></td></tr>
-<tr><td>[[ChromeDriver: chrome on windows (669ffae7cc0ba6c38c0883c85f2ae018)] -> id: phoneType]<---------> has been clicked<br></td></tr>
-<tr><td>[[ChromeDriver: chrome on windows (669ffae7cc0ba6c38c0883c85f2ae018)] -> xpath: //option[text()='Mobile']]<---------> has been clicked<br></td></tr>
-<tr><td>Sleeping ... zZz 3<br></td></tr>
-<tr><td>shshsh@gmail.com <-----> has been put into <-----> [[ChromeDriver: chrome on windows (669ffae7cc0ba6c38c0883c85f2ae018)] -> id: email] and then clicked by Tab Key<br></td></tr>
-<tr><td>Sleeping ... zZz 2<br></td></tr>
-<tr><td>45 Southwest 9th Street <-----> has been put into <-----> [[ChromeDriver: chrome on windows (669ffae7cc0ba6c38c0883c85f2ae018)] -> id: locationField]<br></td></tr>
-<tr><td>Sleeping ... zZz 2<br></td></tr>
+<tr><td>[[ChromeDriver: chrome on windows (14275cfab185c474a68395566aa00bfc)] -> id: isMLOExistNo]<---------> has been clicked<br></td></tr>
+<tr><td>[[ChromeDriver: chrome on windows (14275cfab185c474a68395566aa00bfc)] -> id: consentToContact]<---------> has been clicked<br></td></tr>
+<tr><td>[[ChromeDriver: chrome on windows (14275cfab185c474a68395566aa00bfc)] -> id: personalInformationContinueButton]<---------> has been clicked<br></td></tr>
 </table>
